src/test/deca/syntax/valid/synt/max_float_int.deca
// Description:
//    valeurs maximale et minimale de float et de int
//    syntaxiquement correct
//
// Resultats:
//    ok
//
// Historique:
//    cree le 18/01/2023
//

{
    float x = 3.402823e38;
    float y = -3.402823e38;
    int u = 2147483647;
    int v = -2147483647;
}