src/test/deca/syntax/invalid/synt/positive_infinity.deca
// Description:
//    erreur du a un arrondi à l'infini
//    syntaxiquement incorrect
//
// Resultats:
//    Ligne 13 : literal values cannot be infinite
//
// Historique:
//    cree le 18/01/2023
//

{
    float x = 3.4028236e38;
}